--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Hannah Ker" />
 
 
-<meta name="date" content="2020-01-12" />
+<meta name="date" content="2020-01-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -66,14 +66,14 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">A Minimal Book Example</a></li>
+<li><a href="./">Detailed Methodology</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction and description of data</a></li>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction and Description of Data</a></li>
 <li class="chapter" data-level="2" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html"><i class="fa fa-check"></i><b>2</b> Data Cleaning and Processing</a><ul>
-<li class="chapter" data-level="2.1" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#heart-rate-data"><i class="fa fa-check"></i><b>2.1</b> Heart Rate Data</a></li>
+<li class="chapter" data-level="2.1" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#heart-rate-data"><i class="fa fa-check"></i><b>2.1</b> Heart rate data</a></li>
 <li class="chapter" data-level="2.2" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#creating-a-continuous-heart-rate-layer"><i class="fa fa-check"></i><b>2.2</b> Creating a continuous heart rate layer</a></li>
-<li class="chapter" data-level="2.3" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#personal-comments"><i class="fa fa-check"></i><b>2.3</b> Personal Comments</a></li>
+<li class="chapter" data-level="2.3" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#personal-comments"><i class="fa fa-check"></i><b>2.3</b> Personal comments</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="coding-of-personal-comments.html"><a href="coding-of-personal-comments.html"><i class="fa fa-check"></i><b>3</b> Coding of Personal Comments</a><ul>
 <li class="chapter" data-level="3.1" data-path="coding-of-personal-comments.html"><a href="coding-of-personal-comments.html#coding-according-to-theme"><i class="fa fa-check"></i><b>3.1</b> Coding according to theme</a></li>
@@ -107,17 +107,17 @@
 <div id="header">
 <h1 class="title">Methodology</h1>
 <p class="author"><em>Hannah Ker</em></p>
-<p class="date"><em>2020-01-12</em></p>
+<p class="date"><em>2020-01-13</em></p>
 </div>
 <div id="introduction-and-description-of-data" class="section level1">
-<h1><span class="header-section-number">Section 1</span> Introduction and description of data</h1>
-<p>This document offers a detailed walkthough of a procedure for processing, analyzingm and visualizing data to examine changes in levels of anxiety while I moved through space in London.</p>
+<h1><span class="header-section-number">Section 1</span> Introduction and Description of Data</h1>
+<p>This document offers a detailed walkthough of a procedure for processing, analyzing and visualizing data to examine changes in my levels of anxiety while I moved through space in London.</p>
 <p>This walkthrough requires the following two types of data, collected between Dec 4-Dec 14, 2019:</p>
 <ol style="list-style-type: decimal">
-<li><p>Heart rate measurements, collected with a Fitbit Charge 2 device at intervals of approx 1-5 seconds. Also contains timestamp and coordinates for each measurement.</p></li>
-<li><p>Personal comments, collected using a voice recorder and transcribed into a CSV file.</p></li>
+<li><p>Heart rate measurements, collected with a Fitbit Charge 2 device at intervals of approx 1-5 seconds. Also contains timestamp and coordinates for each measurement. There are a total of 15 .TCX files that contain data for different walking routes through the city.</p></li>
+<li><p>Personal comments, collected using a voice recorder and transcribed and stored in a .CSV file.</p></li>
 </ol>
-<p>This data is stored in an online repository: <INCLUDE LINK></p>
+<p>This data is stored in an online repository: <a href="https://github.com/hannahker/CASA0005-final">Link here</a></p>
 
 </div>
             </section>
