--- a/summarizing-the-data.html
+++ b/summarizing-the-data.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Hannah Ker" />
 
 
-<meta name="date" content="2020-01-12" />
+<meta name="date" content="2020-01-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -128,14 +128,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">A Minimal Book Example</a></li>
+<li><a href="./">Detailed Methodology</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Overview</a></li>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction and Description of Data</a></li>
 <li class="chapter" data-level="2" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html"><i class="fa fa-check"></i><b>2</b> Data Cleaning and Processing</a><ul>
-<li class="chapter" data-level="2.1" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#heart-rate-data"><i class="fa fa-check"></i><b>2.1</b> Heart Rate Data</a></li>
+<li class="chapter" data-level="2.1" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#heart-rate-data"><i class="fa fa-check"></i><b>2.1</b> Heart rate data</a></li>
 <li class="chapter" data-level="2.2" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#creating-a-continuous-heart-rate-layer"><i class="fa fa-check"></i><b>2.2</b> Creating a continuous heart rate layer</a></li>
-<li class="chapter" data-level="2.3" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#personal-comments"><i class="fa fa-check"></i><b>2.3</b> Personal Comments</a></li>
+<li class="chapter" data-level="2.3" data-path="data-cleaning-and-processing.html"><a href="data-cleaning-and-processing.html#personal-comments"><i class="fa fa-check"></i><b>2.3</b> Personal comments</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="coding-of-personal-comments.html"><a href="coding-of-personal-comments.html"><i class="fa fa-check"></i><b>3</b> Coding of Personal Comments</a><ul>
 <li class="chapter" data-level="3.1" data-path="coding-of-personal-comments.html"><a href="coding-of-personal-comments.html#coding-according-to-theme"><i class="fa fa-check"></i><b>3.1</b> Coding according to theme</a></li>
